2005-04-05  Glenn Morris  <gmorris@ast.cam.ac.uk>

	* progmodes/tcl.el (tcl-escaped-newline): New face.
	(tcl-builtin-list): New variable.
	(tcl-set-font-lock-keywords): Add builtins, variables, and escaped
	newlines.  Fix keywords subexpression number.

2005-04-05  Carsten Dominik  <dominik@science.uva.nl>

	* textmodes/org.el (org-diary-default-entry): Fixed call to
	`add-to-diary-entry'.

2005-04-05  Kim F. Storm  <storm@cua.dk>

	* ediff-init.el: Use (featurep 'xemacs).

2005-04-05  David Ponce  <david@dponce.com>

	* cus-edit.el (face): Derive from symbol widget.  Display sample
	of the current face on the fly.
	(widget-face-sample-face-get, widget-face-notify): New functions.
	(widget-face-value-create): Remove.

	* wid-edit.el (widget-field-end): Temporarily remove field
	narrowing before to call `get-char-property'.

2005-04-04  Jay Belanger  <belanger@truman.edu>

	* calc/calc-aent.el (math-read-replacement-list): Add subscripts.
	(math-read-subscripts): New variable.
	(math-read-preprocess-string): Process subscripts.

2005-04-04  Luc Teirlinck  <teirllm@auburn.edu>

	* comint.el (comint-prompt-read-only): Doc fix.

	* dired.el (dired-copy-filename-as-kill): Make `-' arg behave like
	`-1'.  Doc fix.

2005-04-04  Carsten Dominik  <dominik@science.uva.nl>

	* textmodes/org.el (org-insert-mode-line-in-empty-file): Changed
	default value to nil.

2005-04-04  Lute Kamstra  <lute@gnu.org>

	* autorevert.el (auto-revert-mode): Specify :group.
	* battery.el (display-battery-mode): Specify :group.
	* diff-mode.el (diff-minor-mode): Specify :group.
	* font-core.el (font-lock-mode): Specify :group.
	* hl-line.el (hl-line-mode): Specify :group.
	* iimage.el (iimage): New customization group.
	(iimage-mode): Specify :group.
	* longlines.el (longlines-mode): Specify :group.
	* master.el: Don't require easy-mmode.
	(master): New customization group.
	(master-mode): Specify :group.
	* msb.el (msb-mode): Specify :group.
	* reveal.el (reveal-mode): Specify :group.